syntax= "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/claytten/golang-simplebank/pb";

message User {
  string username = 1;
  string full_name = 2;
  string email = 3;
  google.protobuf.Timestamp password_changed_at = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message Account {
  int64 id = 1;
  string owner = 2;
  string currency = 3;
  int64 balance = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message Transfer {
  int64 id = 1;
  int64 from_account_id = 2;
  int64 to_account_id = 3;
  int64 amount = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message Entries {
  int64 id = 1;
  int64 account_id = 2;
  int64 amount = 3;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}